# python-selenium-async

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
selenium_async/: __init__.py  _scripts.py  _selenium.py  core.py  functional.py  options.py  pool.py
source/: conf.py  index.rst
tests/: test_selenium_async.py
tests/integration/: test_pool.py
